[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Enemies/Slime/Slime_Medium_Orange.png" type="Texture" id=1]
[ext_resource path="res://Assets/Other/ShadowWhite_16x16.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/SlimeOrange/SlimeOrange.gd" type="Script" id=4]
[ext_resource path="res://Enemies/SlimeOrange/SlimeOrangeFireBall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.945098, 0.278431, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=5]

[node name="SlimeOrange" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )
detect_radius = 200
fire_rate = 2.0
Bullet = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.313726 )
texture = ExtResource( 2 )
offset = Vector2( 0, -6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -7 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 128, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = -20.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visibility" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="Hurtbox"]
